# punara_rotate

./: .gitignore  README.md  docker-compose.yml
docs/: ADR-001-v0-storage.md  (+4 more)
lens/: CONTRACTS.md  README.md  pyproject.toml
lens/lens/: __init__.py  cli.py  config.py  db.py  events.py  identity.py  marts.py  models.py  olap.py  queries.py  seed.py
lens/lens/api/: __init__.py  analytics.py  app.py  customers.py  deps.py  health.py  schemas.py  scores.py  tenants.py
lens/lens/connectors/: __init__.py  base.py  gorgias.py  interakt.py  judgeme.py  klaviyo.py  shopify.py  synthetic.py
lens/lens/ml/: __init__.py  bgnbd.py  churn.py  engine.py
lens/lens/scores/: __init__.py  altitude.py  autopilot.py  ciq.py  engine.py  flow.py  gravity.py  pulse.py  signal.py  velocity.py  vitals.py  watertight.py
lens/tests/: test_api.py  test_connectors.py  test_connectors_phase2.py  test_foundation.py  test_identity.py  test_marts.py  test_marts_phase2.py  test_ml.py  test_scores.py  test_scores_phase2.py  test_seed.py
lens/web/: package-lock.json  package.json
lens/web/src/app/: globals.css  layout.tsx  page.tsx
lens/web/src/app/cohorts/: page.tsx
lens/web/src/app/customers/: page.tsx
lens/web/src/app/customers/[key]/: page.tsx
lens/web/src/app/experiments/: page.tsx
lens/web/src/app/leaks/: page.tsx
lens/web/src/app/predictions/: page.tsx
lens/web/src/app/revenue/: page.tsx
lens/web/src/app/segments/: page.tsx
lens/web/src/components/: charts.tsx  nav.tsx  ui.tsx
lens/web/src/lib/: api.ts  format.ts  use-api.ts
lens/web/tests/: format.test.mjs
(+39 files in other folders)
